Fixing build issues and code review comments