@@ -65,21 +65,10 @@ public class TaintFlowTreeModel extends DefaultTreeModel implements TreeTableMod
     private static final List<ColumnInfo> COLUMN_INFO = new ArrayList<>();
 
     static {
-        //COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.id", int.class));
-        //COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.timestamp", LocalDateTime.class));
         COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.treecontrol", String.class)); // The tree control
         COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.filename", String.class));
-        COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.function", String.class));
         COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.line", int.class));
         COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.pos", int.class));
-        //COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.scriptLine", int.class));
-        //COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.flow", String.class));
-        //COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.string", String.class));
-        //COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.url", String.class));
-        //COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.from", int.class));
-        //COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.to", int.class));
-        //COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.source", String.class));
-        //COLUMN_INFO.add(new ColumnInfo("foxhound.panel.table.header.sink", String.class));
     };
 
     private static final int COLUMN_COUNT = COLUMN_INFO.size();
@@ -114,9 +103,9 @@ public class TaintFlowTreeModel extends DefaultTreeModel implements TreeTableMod
         }
 
         // Add final untainted string fragment
-        if ((!ranges.isEmpty()) && (ranges.getLast().getEnd() < taintedString.length())) {
+        if ((!ranges.isEmpty()) && (ranges.get(ranges.size() - 1).getEnd() < taintedString.length())) {
             DefaultMutableTreeNode stringNode = new DefaultMutableTreeNode(
-                    StringUtils.limitedSubstring(taintedString, ranges.getLast().getEnd(), taintedString.length()));
+                    StringUtils.limitedSubstring(taintedString, ranges.get(ranges.size() - 1).getEnd(), taintedString.length()));
             node.add(stringNode);
         }
         this.fireTreeStructureChanged(this, null, null, null);
